[package]
authors      = ["Abdelhamid Bakhta <abdelhamid.bakhta@gmail.com>"]
categories   = ["bitcoin", "light-client", "stark"]
description  = "Bitcoin Header chain fetcher."
edition      = "2021"
homepage     = "https://github.com/bitcoin-stark/khepri/khepri-headerchain-fetcher"
keywords     = ["p2p", "sync", "nats", "streaming"]
license-file = "LICENSE"
name         = "khepri_headerchain_fetcher"
readme       = "README.md"
repository   = "https://github.com/bitcoin-stark/khepri/khepri-headerchain-fetcher"
version      = "0.0.1"


[dependencies]
anyhow = "1.0.57"
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.17"
serde = { version = "1.0.137", features = ["derive"] }
serde_derive = "1.0.137"